--- a/HTML/about.html
+++ b/HTML/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +7,7 @@
     <meta name="description" content="FormaUnivStrasLPDWCA21 - Nous contacter"> 
     <meta name="robots" content="index,follow">
     <meta name="googlebot" content="index,follow">
-    <link rel="canonical" href="https://formunivstraslpdwca21.xyz">
+    <link rel="canonical" href="https://www.formunivstraslpdwca21.xyz/">
     <meta property="og:locale" content="fr_FR">
     <meta property="og:type" content="website">
     <meta property="og:title" content="FormaUnivStrasLPDWCA21 - A propos de nous">
@@ -15,6 +15,23 @@
     <meta property="og:description" content="FormaUnivStrasLPDWCA21 - Nous contacter">
     <link rel="stylesheet" href="../CSS/index.css">
     <link rel="stylesheet" href="../CSS/materialize.css">
+    <link rel="apple-touch-icon" sizes="57x57" href="Assets/Images/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="Assets/Images/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="Assets/Images/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="Assets/Images/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="Assets/Images/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="Assets/Images/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="Assets/Images/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="Assets/Images/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="Assets/Images/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="Assets/Images/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="Assets/Images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="Assets/Images/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="Assets/Images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="Assets/Images/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="Assets/Images/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <script src="../js/materialize.js"></script>
 </head>
 <body>
@@ -22,7 +39,7 @@
         <nav>
             <div class="nav-wrapper">
               <a href="/" class="brand-logo">
-                  <img src="/Assets/Images/logo_formaunivstraslpdwca21.png" alt="Logo de l'enseigne FormaUnivStrasLPDWCA21" width="70px" height="70px">
+                  <img src="/Assets/Images/logo-formaunivstraslpdwca21.png" alt="Logo de l'enseigne FormaUnivStrasLPDWCA21" width="70px" height="70px">
               </a>
               <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="/">Accueil</a></li>
@@ -53,7 +70,7 @@
             Voilà l'équipe qui se cache derrière FormaUnivStrasLPDWCA21 et qui s'occupe de faire en sorte que chaque jour, tu aies de nouvelles offres, réductions, jeux qui pourrait potentiellement t'intéresser ! <br>
             Donnes leur plein d'amour pour les récompenser dans cette dure tâche. N'hésites surtout pas à parler de nous à tes proches, tes amis pour augmenter notre notoriété !
           </p>
-          <img src="../Assets/Images/equipe_formaunivstraslpdwca21.png" alt="Photo de l'équipe de FormaUnivStrasLPDWCA21">
+          <img src="../Assets/Images/equipe-formaunivstraslpdwca21.png" alt="Photo de l'équipe de FormaUnivStrasLPDWCA21">
       </div>
     </main>
 
