--- a/HTML/catalogue.html
+++ b/HTML/catalogue.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,10 +11,27 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="FormaUnivStrasLPDWCA21 - Catalogue">
     <meta property="og:url" content="https://formunivstraslpdwca21.xyz/HTML/catalogue.html">
-    <link rel="canonical" href="https://formunivstraslpdwca21.xyz">
+    <link rel="canonical" href="https://www.formunivstraslpdwca21.xyz/">
     <meta property="og:description" content="FormaUnivStrasLPDWCA21 - Le catalogue de jeux sur PC et Console">
     <link rel="stylesheet" href="../CSS/index.css">
     <link rel="stylesheet" href="../CSS/materialize.css">
+    <link rel="apple-touch-icon" sizes="57x57" href="Assets/Images/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="Assets/Images/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="Assets/Images/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="Assets/Images/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="Assets/Images/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="Assets/Images/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="Assets/Images/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="Assets/Images/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="Assets/Images/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="Assets/Images/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="Assets/Images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="Assets/Images/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="Assets/Images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="Assets/Images/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="Assets/Images/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <script src="../js/materialize.js"></script>
 </head>
 <body>
@@ -22,7 +39,7 @@
         <nav>
             <div class="nav-wrapper">
               <a href="/" class="brand-logo">
-                  <img src="/Assets/Images/logo_formaunivstraslpdwca21.png" alt="Logo de l'enseigne FormaUnivStrasLPDWCA21" width="70px" height="70px">
+                  <img src="/Assets/Images/logo-formaunivstraslpdwca21.png" alt="Logo de l'enseigne FormaUnivStrasLPDWCA21" width="70px" height="70px">
               </a>
               <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="/">Accueil</a></li>
@@ -40,9 +57,9 @@
 
         <div class="container">
             <h2>La sélection FormaUnivStrasLPDWCA21</h2>
-            <img src="/Assets/Images/formaunivstraslpdwca21_psp.jpg" alt="Produit PSP vendu chez FormaUnivStrasLPDWCA21" width="150px" height="100px">
-            <img src="/Assets/Images/formaunivstraslpdwca21_manette_ps2.png" alt="Manette PS2 vendue chez FormaUnivStrasLPDWCA21" width="150px" height="100px">
-            <img src="/Assets/Images/formaunivstraslpdwca21_casque_audio.jpg" alt="Casque Audio vendu chez FormaUnivStrasLPDWCA21" width="150px" height="100px">
+            <img src="/Assets/Images/formaunivstraslpdwca21-psp.jpg" alt="Produit PSP vendu chez FormaUnivStrasLPDWCA21" width="150px" height="100px">
+            <img src="/Assets/Images/formaunivstraslpdwca21-manette-ps2.png" alt="Manette PS2 vendue chez FormaUnivStrasLPDWCA21" width="150px" height="100px">
+            <img src="/Assets/Images/formaunivstraslpdwca21-casque-audio.jpg" alt="Casque Audio vendu chez FormaUnivStrasLPDWCA21" width="150px" height="100px">
         </div>
 
         <div>
@@ -52,7 +69,7 @@
         <div>
           <h3>Les promotions et exclusivités FormaUnivStrasLPDWCA21</h3>
           <p>Achètes ce pack exclusif PS3 avec GTA offert, et frais de ports offerts !</p>
-          <img src="/Assets/Images/pack_ps3_formaunivstraslpdwca21.jpg" alt="Pack PS3 vendu chez FormaUnivStrasLPDWCA21" width="150px" height="100px">
+          <img src="/Assets/Images/pack-ps3-formaunivstraslpdwca21.jpg" alt="Pack PS3 vendu chez FormaUnivStrasLPDWCA21" width="150px" height="100px">
         </div>
     </main>
 
