--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FormaUnivStrasLPDWCA21 - Catalogue de jeux en ligne</title>
     <meta name="description" content="FormaUnivStrasLPDWCA21 - Vendre et acheter des jeux sur PC et Console"> 
-    <link rel="canonical" href="https://formunivstraslpdwca21.xyz">
+    <link rel="canonical" href="https://www.formunivstraslpdwca21.xyz/">
     <meta name="robots" content="index,follow">
     <meta name="googlebot" content="index,follow">
     <meta property="og:locale" content="fr_FR">
@@ -39,7 +39,7 @@
         <nav>
             <div class="nav-wrapper">
               <a href="#" class="brand-logo">
-                  <img src="/Assets/Images/logo_formaunivstraslpdwca21.png" alt="Logo de l'enseigne FormaUnivStrasLPDWCA21" width="70px" height="70px">
+                  <img src="/Assets/Images/logo-formaunivstraslpdwca21.png" alt="Logo de l'enseigne FormaUnivStrasLPDWCA21" width="70px" height="70px">
               </a>
               <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li class="active"><a href="#">Accueil</a></li>
@@ -60,16 +60,16 @@
         <div class="center">
           <h2>Les offres de la semaine FormaUnivStrasLPDWCA21</h2>
           <div class="flex">
-          <img src="./Assets/Images/ballon_foot_formaunivstraslpdwca21.jpg" width="300" height="300" alt="Ballon de football vendu par FormaUnivStrasLPDWCA21">
-          <img src="./Assets/Images/jeux_de_carte_formaunivstraslpdwca21.jpg"  width="300" height="300" alt="Jeu de cartes vendu par FormaUnivStrasLPDWCA21">
-          <img src="/Assets/Images/formaunivstraslpdwca21_casque_audio.jpg" alt="Casque Audio vendu chez FormaUnivStrasLPDWCA21" width="300" height="300">
+          <img src="./Assets/Images/ballon-foot-formaunivstraslpdwca21.jpg" width="300" height="300" alt="Ballon de football vendu par FormaUnivStrasLPDWCA21">
+          <img src="./Assets/Images/jeux-de-carte-formaunivstraslpdwca21.jpg"  width="300" height="300" alt="Jeu de cartes vendu par FormaUnivStrasLPDWCA21">
+          <img src="/Assets/Images/formaunivstraslpdwca21-casque-audio.jpg" alt="Casque Audio vendu chez FormaUnivStrasLPDWCA21" width="300" height="300">
         </div>
         <div class="center">
           <h2>Les produits les plus vendus chez FormaUnivStrasLPDWCA21</h2>
           <div class="flex">
-            <img src="/Assets/Images/formaunivstraslpdwca21_manette_ps2.png" alt="Manette PS2 vendue chez FormaUnivStrasLPDWCA21" width="300px" height="300px">
-            <img src="./Assets/Images/jeux_de_carte_formaunivstraslpdwca21.jpg"  width="300" height="300" alt="Jeu de cartes vendu par FormaUnivStrasLPDWCA21">
-            <img src="/Assets/Images/nes_formaunivstraslpdwca21.jpg" alt="Console NES vendue chez FormaUnivStrasLPDWCA21" width="300" height="300">
+            <img src="/Assets/Images/formaunivstraslpdwca21-manette-ps2.png" alt="Manette PS2 vendue chez FormaUnivStrasLPDWCA21" width="300px" height="300px">
+            <img src="./Assets/Images/jeux-de-carte-formaunivstraslpdwca21.jpg"  width="300" height="300" alt="Jeu de cartes vendu par FormaUnivStrasLPDWCA21">
+            <img src="/Assets/Images/nes-formaunivstraslpdwca21.jpg" alt="Console NES vendue chez FormaUnivStrasLPDWCA21" width="300" height="300">
         </div>
         </div>
         <div class="center">
@@ -79,7 +79,7 @@
               Tout ça pour rappeler que l'entièreté du contenu est fictif, donc il ne faut pas trop y prêter attention. <br>
             </p>
             <figure>
-              <img src="./Assets/Images/formaunivstraslpdwca21_paysage.jpg" alt="Locaux de FormaUnivStrasLPDWCA21" width="100%" height="500px">
+              <img src="./Assets/Images/formaunivstraslpdwca21-paysage.jpg" alt="Locaux de FormaUnivStrasLPDWCA21" width="100%" height="500px">
               <figcaption>Admire les locaux pixélisés de FormaUnivStrasLPDWCA21 !</figcaption>
             </figure>
         </div>
@@ -92,7 +92,7 @@
               T'attends quoi pour nous rejoindre ?!
             </p>
             <figure>
-              <img src="./Assets/Images/escape_game_formaunivstraslpdwca21.jpg" alt="Escape Game chez FormaUnivStrasLPDWCA21" width="100%" height="500px">
+              <img src="./Assets/Images/escape-game-formaunivstraslpdwca21.jpg" alt="Escape Game chez FormaUnivStrasLPDWCA21" width="100%" height="500px">
               <figcaption>Viens résoudre des énigmes chez nous !</figcaption>
             </figure>
         </div>
