--- a/HTML/catalogue.html
+++ b/HTML/catalogue.html
@@ -35,20 +35,20 @@
     <script src="../js/materialize.js"></script>
 </head>
 <body>
-    <header>
-        <nav>
-            <div class="nav-wrapper">
-              <a href="/" class="brand-logo">
-                  <img src="/Assets/Images/logo-formaunivstraslpdwca21.png" alt="Logo de l'enseigne FormaUnivStrasLPDWCA21" width="70px" height="70px">
-              </a>
-              <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="/">Accueil</a></li>
-                <li class="active"><a href="#">Catalogue</a></li>
-                <li><a href="./about.html">A Propos</a></li>
-              </ul>
-            </div>
-          </nav>
-    </header>
+  <header>
+    <nav>
+        <div class="nav-wrapper">
+          <a href="#" class="brand-logo left">
+              <img src="/Assets/Images/logo-formaunivstraslpdwca21.png" alt="Logo de l'enseigne FormaUnivStrasLPDWCA21" width="70px" height="70px">
+          </a>
+          <ul id="nav-mobile" class="right">
+            <li class="active"><a class="btn-large" href="#">Accueil</a></li>
+            <li><a href="/HTML/catalogue.html" class="btn-large" >Catalogue</a></li>
+            <li><a href="/HTML/about.html" class="btn-large" >A Propos</a></li>
+          </ul>
+        </div>
+      </nav>
+</header>
     <main>
         <div class="center" id="background">
             <h1>FormaUnivStrasLPDWCA21</h1>
