--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
     <header>
         <nav>
             <div class="nav-wrapper">
-              <a href="#" class="brand-logo">
+              <a href="#" class="brand-logo left">
                   <img src="/Assets/Images/logo-formaunivstraslpdwca21.png" alt="Logo de l'enseigne FormaUnivStrasLPDWCA21" width="70px" height="70px">
               </a>
               <ul id="nav-mobile" class="right">
-                <li class="active"><a href="#">Accueil</a></li>
-                <li><a href="/HTML/catalogue.html">Catalogue</a></li>
-                <li><a href="/HTML/about.html">A Propos</a></li>
+                <li><a class="btn-large" href="#">Accueil</a></li>
+                <li><a href="/HTML/catalogue.html" class="btn-large" >Catalogue</a></li>
+                <li><a href="/HTML/about.html" class="btn-large" >A Propos</a></li>
               </ul>
             </div>
           </nav>
