--- a/HTML/catalogue.html
+++ b/HTML/catalogue.html
@@ -42,7 +42,7 @@
               <img src="/Assets/Images/logo-formaunivstraslpdwca21.png" alt="Logo de l'enseigne FormaUnivStrasLPDWCA21" width="70px" height="70px">
           </a>
           <ul id="nav-mobile" class="right">
-            <li class="active"><a class="btn-large" href="#">Accueil</a></li>
+            <li class="active"><a class="btn-large" href="/index.html">Accueil</a></li>
             <li><a href="/HTML/catalogue.html" class="btn-large" >Catalogue</a></li>
             <li><a href="/HTML/about.html" class="btn-large" >A Propos</a></li>
           </ul>
